--- a/app/views/universities/_avatar.html.erb
+++ b/app/views/universities/_avatar.html.erb
@@ -9,7 +9,9 @@
 
   <% end %>
   <!-- Trigger the modal with a button -->
-<button type="button" class="pencil" data-toggle="modal" data-target="#AvatarModal"><span class="fa fa-pencil"></span></button>
+<% if user_signed_in? %><button type="button" class="pencil" data-toggle="modal" data-target="#AvatarModal"><span class="fa fa-pencil"></span></button><%else%>
+<button class="pencil"><a href="<%= new_user_session_path %>"> <span class="fa fa-pencil"></span></a></button><%end%>
+
 
 <!--  -->
 </div>
