--- a/app/views/careers/show.html.erb
+++ b/app/views/careers/show.html.erb
@@ -40,27 +40,9 @@
     <%= render 'universities/unive_score' %>
   </div>
 
-  <div id="magic">
-      <h4 class="titulo">Academic Score</h4>
-      <%= render 'universities/academicscore' %>
-
-      <h4 class="titulo">Infraestructure Score</h4>
-      <%= render 'universities/infraestructurescore' %>
-
-      <h4 class="titulo">Proffesors Score</h4>
-      <%= render 'universities/professorscore' %>
-
-      <h4 class="titulo">Alumni Score</h4>
-      <%= render 'universities/alumniscore' %>
-
-
-      <h4 class="titulo">Cost Score</h4>
-      <%= render 'universities/investmentscore' %>
-
-
-      <h4 class="titulo">Party Life Score</h4>
-      <%= render 'universities/partyscore' %>
-  </div>
+<div class="hidden-sm hidden-xs">
+<%= render 'delicious' %>
+</div>
   </div>
 
 
@@ -180,6 +162,12 @@
 </div>
 </div>
 
+</div>
+
+<div class="col-md-12">
+<div class="visible-sm visible-xs">
+  <%= render 'delicious' %>
+</div>
 </div>
 
 <script>
