--- a/app/views/careers/index.html.erb
+++ b/app/views/careers/index.html.erb
@@ -63,6 +63,15 @@
         </div>
         <% end %>
       </div>
+
+<div class="row">
+  <div class="center">
+<% unless @careers.blank? %>
+  <%= will_paginate @careers %>
+<% end %>
+</div>
+</div>
+
     </div>
   </div>
 </div>
