--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -12,7 +12,19 @@
   </div>
   <hr>
 
-  <div class="row">
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Location
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+
+<div class="row">
 
   <div class="col-md-4 col-xs-6">
   <span> <%= f.check_box :country_continent_eq, {:class => "hidden", :id => "EuropeP"}, "Europe", false %>
@@ -44,279 +56,327 @@
   <label for="OceaniaP" class="botones button_red">Oceania</label></span>
   </div>
 
+  </div> 
+
+      </div>
+    </div>
   </div>
-
-<hr>
-
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Amenities
+        </a>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
 <div class="row">
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_wifi_eq, :value => true, :id => 'Wifi', class: "hidden" %>
   <label for="Wifi" class="botones button_red">Wifi</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_cafe_eq, :value => true, :id => 'CafeP', class: "hidden" %>
   <label for="CafeP" class="botones button_red">Cafeteria</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_libray_eq, :value => true, :id => 'LibrayP', class: "hidden" %>
   <label for="LibrayP" class="botones button_red">Library</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :gym_eq, :value => true, :id => 'GymP', class: "hidden" %>
   <label for="GymP" class="botones button_red">Gym</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_job_help_eq, :value => true, :id => 'JobP', class: "hidden" %>
   <label for="JobP" class="botones button_red">Job Board</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_student_exchange_eq, :value => true, :id => 'StudyP', class: "hidden" %>
   <label for="StudyP" class="botones button_red">Study Abroad</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_safe_eq, :value => true, :id => 'SafeP', class: "hidden" %>
   <label for="SafeP" class="botones button_red">Safe Campus</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :pool_eq, :value => true, :id => 'PoolP', class: "hidden" %>
   <label for="PoolP" class="botones button_red">Swimming Pool</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :residence_eq, :value => true, :id => 'ResidenceP', class: "hidden" %>
   <label for="ResidenceP" class="botones button_red">Student Residence</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :location_eq, :value => true, :id => 'LocationP', class: "hidden" %>
   <label for="LocationP" class="botones button_red">Good Location</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :luch_eq, :value => true, :id => 'LunchP', class: "hidden" %>
   <label for="LunchP" class="botones button_red">Places for Lunch</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :is_spiritual_eq, :value => true, :id => 'SpiritP', class: "hidden" %>
   <label for="SpiritP" class="botones button_red">Spiritual</label></span>
   </div>
 
-</div>
-<hr>
-<!-- sports -->
-
+</div>        
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Sports
+        </a>
+      </h4>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="panel-body">
 <div class="row">
  
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :football_eq, :value => true, :id => 'FootballP', class: "hidden" %>
   <label for="FootballP" class="botones button_red">Football</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :soccer_eq, :value => true, :id => 'SoccerP', class: "hidden" %>
   <label for="SoccerP" class="botones button_red">Soccer</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :volley_eq, :value => true, :id => 'VolleyP', class: "hidden" %>
   <label for="VolleyP" class="botones button_red">VolleyBall</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :tennis_eq, :value => true, :id => 'TennisP', class: "hidden" %>
   <label for="TennisP" class="botones button_red">Tennis</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
-  <span> <%= f.check_box :table_tennis_eq, :value => true, :id => 'TableP', class: "hidden" %>
-  <label for="TableP" class="botones button_red">Table Tennis</label></span>
-  </div>
-
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :baseball_eq, :value => true, :id => 'BaseP', class: "hidden" %>
   <label for="BaseP" class="botones button_red">BaseBall</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
-  <span> <%= f.check_box :track_and_field_eq, :value => true, :id => 'TrackP', class: "hidden" %>
-  <label for="TrackP" class="botones button_red">Track and Field</label></span>
-  </div>
-
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :golf_eq, :value => true, :id => 'GolfP', class: "hidden" %>
   <label for="GolfP" class="botones button_red">Golf</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :swimming_eq, :value => true, :id => 'SwimmP', class: "hidden" %>
   <label for="SwimmP" class="botones button_red">Swimming</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :rugby_eq, :value => true, :id => 'RugbyP', class: "hidden" %>
   <label for="RugbyP" class="botones button_red">Rugby</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :climbing_eq, :value => true, :id => 'ClimbP', class: "hidden" %>
   <label for="ClimbP" class="botones button_red">Climbing</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :lacrosse_eq, :value => true, :id => 'LacrosseP', class: "hidden" %>
   <label for="LacrosseP" class="botones button_red">Lacrosse</label></span>
   </div> 
 
+  <div class="col-md-2 col-xs-4">
+  <span> <%= f.check_box :track_and_field_eq, :value => true, :id => 'TrackP', class: "hidden" %>
+  <label for="TrackP" class="botones button_red">Track and Field</label></span>
+  </div>
+
+  <div class="col-md-2 col-xs-4">
+  <span> <%= f.check_box :table_tennis_eq, :value => true, :id => 'TableP', class: "hidden" %>
+  <label for="TableP" class="botones button_red">Table Tennis</label></span>
+  </div>
+
 
 </div>
-<hr>
+        
+      </div>
+    </div>
+  </div>
 
-<!-- Culture -->
+<div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          Cultural Activities
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+      <div class="panel-body">
 
 <div class="row">
 
-  <div class="col-md-2 col-xs-3">
-  <span> <%= f.check_box :drawing_eq, :value => true, :id => 'Drawing', class: "hidden" %>
-  <label for="Drawing and Painting" class="botones button_red">Drawing and Painting</label></span>
-  </div>
-
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :photography_eq, :value => true, :id => 'Photography', class: "hidden" %>
   <label for="Photography" class="botones button_red">Photography</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :sculpture_eq, :value => true, :id => 'Sculpture', class: "hidden" %>
   <label for="Sculpture" class="botones button_red">Sculpture</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :theatre_eq, :value => true, :id => 'Theatre', class: "hidden" %>
   <label for="Theatre" class="botones button_red">Theatre</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :wood_eq, :value => true, :id => 'Wood Working', class: "hidden" %>
   <label for="Wood Working" class="botones button_red">Wood Working</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :music_eq, :value => true, :id => 'Music', class: "hidden" %>
   <label for="Music" class="botones button_red">Music</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :choir_eq, :value => true, :id => 'Choir', class: "hidden" %>
   <label for="Choir" class="botones button_red">Choir</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :marching_band_eq, :value => true, :id => 'Marching Band', class: "hidden" %>
   <label for="Marching Band" class="botones button_red">Marching Band</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :dance_eq, :value => true, :id => 'Dance', class: "hidden" %>
   <label for="Dance" class="botones button_red">Dance</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
-  <span> <%= f.check_box :mun_eq, :value => true, :id => 'Model United Nations', class: "hidden" %>
-  <label for="Model United Nations" class="botones button_red">Model United Nations</label></span>
-  </div>
-
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :volunteer_eq, :value => true, :id => 'Volunteer', class: "hidden" %>
   <label for="Volunteer" class="botones button_red">Volunteer</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-6">
   <span> <%= f.check_box :gamers_eq, :value => true, :id => 'Gamers Club', class: "hidden" %>
   <label for="Gamers Club" class="botones button_red">Gamers Club</label></span>
+  </div>
+
+  <div class="col-md-2 col-xs-6">
+  <span> <%= f.check_box :drawing_eq, :value => true, :id => 'Drawing', class: "hidden" %>
+  <label for="Drawing and Painting" class="botones button_red">Drawing and Painting</label></span>
+  </div>
+
+  <div class="col-md-2 col-xs-6">
+  <span> <%= f.check_box :mun_eq, :value => true, :id => 'Model United Nations', class: "hidden" %>
+  <label for="Model United Nations" class="botones button_red">Model United Nations</label></span>
   </div>
 
 
 
 </div>
-<hr>
+        
+      </div>
+    </div>
+  </div>
 
-<!-- Languages -->
+<div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFive">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          Language friendly
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+      <div class="panel-body">
 
 <div class="row">
   
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :english_eq, :value => true, :id => 'English', class: "hidden" %>
   <label for="English" class="botones button_red">English</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :spanish_eq, :value => true, :id => 'Spanish', class: "hidden" %>
   <label for="Spanish" class="botones button_red">Spanish</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :french_eq, :value => true, :id => 'French', class: "hidden" %>
   <label for="French" class="botones button_red">French</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :german_eq, :value => true, :id => 'German', class: "hidden" %>
   <label for="German" class="botones button_red">German</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :chinese_eq, :value => true, :id => 'Chinese', class: "hidden" %>
   <label for="Chinese" class="botones button_red">Chinese</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :italian_eq, :value => true, :id => 'Italian', class: "hidden" %>
   <label for="Italian" class="botones button_red">Italian</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :portuguese_eq, :value => true, :id => 'Portuguese', class: "hidden" %>
   <label for="Portuguese" class="botones button_red">Portuguese</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :russian_eq, :value => true, :id => 'Russian', class: "hidden" %>
   <label for="Russian" class="botones button_red">Russian</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :japanese_eq, :value => true, :id => 'Japanese', class: "hidden" %>
   <label for="Japanese" class="botones button_red">Japanese</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :latin_eq, :value => true, :id => 'Latin', class: "hidden" %>
   <label for="Latin" class="botones button_red">Latin</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :greek_eq, :value => true, :id => 'Greek', class: "hidden" %>
   <label for="Greek" class="botones button_red">Greek</label></span>
   </div>
 
-  <div class="col-md-2 col-xs-3">
+  <div class="col-md-2 col-xs-4">
   <span> <%= f.check_box :signs_eq, :value => true, :id => 'Signs Language', class: "hidden" %>
   <label for="Signs Language" class="botones button_red">Signs Language</label></span>
   </div>
 
 
+</div>   
 
+      </div>
+    </div>
+  </div>
 </div>
-<hr>
 
 
   <%= f.submit "SEARCH", class: "button button_blue" %>
